Code fixes after analysis with FindBugs * Fixes for potential NPE. * Replacement of inefficient constructors. * Removal of useless fields and local variables.